@@ -1,3 +1,7 @@
+2011-01-24  John W. Eaton  <jwe@octave.org>
+
+	* NEWS: Note change in audio/mu2lin.
+
 2010-01-22  Tatsuro MATSUOKA  <tmacchant@yahoo.co.jp>
 
 	* README.MinGW: Small corrections to documentation.
